[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'es-testbed'
authors = [{ name='Elastic', email='info@elastic.co' }]
dynamic = ['version']
description = 'Library to help with building and tearing down indices, data streams, repositories and snapshots'
license = { text='Apache-2.0' }
readme = 'README.md'
requires-python = '>=3.8'
classifiers = [
  'Intended Audience :: Developers',
  'Intended Audience :: System Administrators',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
keywords = [
    'elasticsearch',
    'index',
    'testing',
    'datastream',
    'repository',
    'snapshot',
]
dependencies = [
    'gitpython==3.1.43',
    'dotmap==1.3.30',
    'es_client>=8.17.5',
    'es-wait>=0.12.0',
    'tiered_debug==1.0.0',
]

[project.optional-dependencies]
test = [
    'mock',
    'requests',
    'pytest >=7.2.1',
    'pytest-cov',
    'pytest-dotenv',
]
doc = ['sphinx', 'sphinx_rtd_theme']

[tool.hatch.module]
name = 'es-testbed'

[project.urls]
Documentation = 'https://github.com/untergeek/es-testbed#readme'
Issues = 'https://github.com/untergeek/es-testbed/issues'
Source = 'https://github.com/untergeek/es-testbed'

[tool.hatch.version]
path = 'src/es_testbed/__init__.py'

[tool.hatch.envs.default]
dependencies = [
  'coverage[toml]>=6.5',
  'pytest',
]

[tool.hatch.envs.default.scripts]
test = 'pytest {args:tests}'
test-cov = 'coverage run -m pytest {args:tests}'
cov-report = [
  '- coverage combine',
  'coverage report',
]
cov = [
  'test-cov',
  'cov-report',
]

[[tool.hatch.envs.test.matrix]]
python = ['3.8', '3.9', '3.10', '3.11', '3.12']

[tool.hatch.envs.test.scripts]
test = 'pytest'
test-cov = 'pytest --cov=es_testbed'
cov-report = 'pytest --cov=es_testbed --cov-report html:cov_html'

[tool.hatch.envs.lint]
detached = true
dependencies = [
  'black>=23.1.0',
  'mypy>=1.0.0',
]
[tool.hatch.envs.lint.scripts]
typing = 'mypy --install-types --non-interactive {args:src/es_testbed tests}'
style = [
  'black --check --diff {args:.}',
]
fmt = [
  'black {args:.}',
  'style',
]
all = [
  'style',
  'typing',
]

[tool.black]
target-version = ['py38']
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'

[tool.coverage.run]
source_pkgs = ['es_testbed', 'tests']
branch = true
parallel = true
omit = []

[tool.coverage.paths]
es_testbed = ['src/es_testbed', '*/es-testbed/src/es_testbed']
tests = ['tests', '*/es-testbed/tests']

[tool.coverage.report]
exclude_lines = [
  'no cov',
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
]

[tool.hatch.build.targets.sdist]
exclude = [
    'dist',
    'docs',
    'docker_test',
    'examples',
    'html_docs',
    'tests',
    'pytest.ini',
]

[tool.hatch.build.targets.wheel]
packages = ["src/es_testbed"]

[tool.hatch.envs.test]
dependencies = [
    'coverage[toml]',
    'mock',
    'requests',
    'pytest >=7.2.1',
    'pytest-cov',
    'pytest-dotenv',
]

[tool.pytest.ini_options]
pythonpath = [".", "src/es_testbed"]
minversion = "7.2"
addopts = "-ra -q"
testpaths = [
    "tests/unit",
    "tests/integration",
]

[publish.index.repos.main]
url = 'https://upload.pypi.org/legacy/'
username = '__token__'
